# network_coverage

./: .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  Readme.md  alembic.ini  docker-compose.yml  env.example  preprocessed_mobile_sites.csv  pyproject.toml  run.py
alembic/: env.py
alembic/versions/: 63ac31838f8f_create_mobile_sites_table.py
app/: __init__.py  config.py  exception_handlers.py  main.py  routes.py
app/application/: __init__.py  schemas.py  use_cases.py
app/domain/: entities.py  exceptions.py  repositories.py  services.py
app/infrastructure/: coordinate_utils.py  data_loader.py  database.py  geocode_service.py  models.py  repositories.py
scripts/: load_data.py  preprocess_and_load.py  preprocess_csv.py  reset_db.py  setup.sh
tests/: __init__.py  test_routes.py
tests/application/: test_use_cases.py
tests/domain/: test_domain_entities.py
tests/infrastructure/: test_coordinate_utils.py  test_data_loader.py  test_geocode_service.py  test_repository.py
tests/scripts/: test_preprocessing.py
